--- a/.github/workflows/test_deploy.yaml
+++ b/.github/workflows/test_deploy.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Extract version
         id: extract_version
         run: |
-          VERSION=$(echo "$REF" | awk -F '/' '{print $NF}')
+          VERSION=$(echo "$REF" | awk -F '/' '{print $NF}' | tr -d 'v')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
         env:
           REF: ${{ github.ref }}
