modifica versione pyproject

--- a/.github/workflows/test_deploy.yaml
+++ b/.github/workflows/test_deploy.yaml
@@ -4,13 +4,13 @@ name: test_deploy
 on:
   release:
     types: [published]
-    
+
 jobs:
-  build:
+  update_version:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Extract version
         id: extract_version
         run: |
@@ -19,9 +19,26 @@ jobs:
         env:
           REF: ${{ github.ref }}
 
-      - name: foobar
+      - name: update_version
         run: |
-            echo "Versione estratta: $VERSION"
+          sed -i 's/version.*/version = "$VERSION"/' pyproject.toml
         env:
-            VERSION: ${{ steps.extract_version.outputs.version }}
-        
+          VERSION: ${{ steps.extract_version.outputs.version }}
+
+      - name: Upload pyproject
+        uses: actions/upload-artifact/@v4
+        with:
+          name: pyproject
+          path: pyproject.toml
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Update pyproject
+        uses: actions/download-artifact@v4
+        with:
+          name: pyproject
+
+      - name: Print version
+        run: |
+          cat pyproject.toml | grep version
