--- a/.github/workflows/test_deploy.yaml
+++ b/.github/workflows/test_deploy.yaml
@@ -3,7 +3,7 @@ name: test_deploy
 # Controls when the workflow will run
 on:
   release:
-    types: [released]
+    types: [published, released]
 
 jobs:
   update_version:
@@ -20,8 +20,7 @@ jobs:
           REF: ${{ github.ref }}
 
       - name: update_version
-        run: |
-          sed -i 's/version.*/version = "$VERSION"/' pyproject.toml
+        run: sed -i "s/version.*/version = \"$VERSION\"/" pyproject.toml
         env:
           VERSION: ${{ steps.extract_version.outputs.version }}
 
@@ -31,9 +30,24 @@ jobs:
           name: pyproject
           path: pyproject.toml
 
-  build:
+  deploy_prod:
     runs-on: ubuntu-latest
     needs: [update_version]
+    if: ${{ !github.event.release.prerelease }}
+    steps:
+      - name: Update pyproject
+        uses: actions/download-artifact@v4
+        with:
+          name: pyproject
+
+      - name: Print version
+        run: |
+          cat pyproject.toml | grep version
+
+  deploy_test:
+    runs-on: ubuntu-latest
+    needs: [update_version]
+    if: ${{ github.event.release.prerelease }}
     steps:
       - name: Update pyproject
         uses: actions/download-artifact@v4
